deployment/kubernetes/overlays/prod/api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tz-api
  namespace: tz
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: api
        image: vasiliysilver/tz-api:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
