deployment/kubernetes/overlays/prod/consumer-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tz-consumer
  namespace: tz
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: consumer
        image: vasiliysilver/tz-consumer:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
