deployment/kubernetes/overlays/prod/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tz-api-ingress
  namespace: tz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: api.tz.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tz-api-service
            port:
              number: 8000
